[gd_scene load_steps=4 format=3 uid="uid://ci0x410xflff5"]

[ext_resource type="Script" uid="uid://cq5avnnlm0vle" path="res://CostumePickable/costume_pickable.gd" id="1_x5rmx"]
[ext_resource type="Texture2D" uid="uid://y8g27b3mhb27" path="res://assets/character/Skins/Alien_masques_0003_Spouderman.png" id="2_yv0mo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jlnc"]
size = Vector2(60, 60)

[node name="CostumePickable" type="Area2D"]
script = ExtResource("1_x5rmx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7jlnc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.80142e-06, -5.18146e-06)
scale = Vector2(0.186335, 0.160428)
texture = ExtResource("2_yv0mo")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
